--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,9 +1,9 @@
 /* PC */
 
 @media (min-width: 992px) {
-    .mobile-header{
-        display: none;
-    }
+  .mobile-header {
+    display: none;
+  }
 }
 
 /* Tablet & mobile */
@@ -26,12 +26,11 @@
     left: 43px;
     color: #fff;
     width: 24px;
-    z-index: 3;
   }
 
   /* căn phần overlay */
 
-  .menu-overlay{
+  .menu-overlay {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.5);
     inset: 0;
@@ -44,12 +43,12 @@
 
   /* kiểm tra menu checkbox được check? */
 
-  .menu-checkbox:checked ~ .menu-overlay{
+  .menu-checkbox:checked ~ .menu-overlay {
     opacity: 1;
     visibility: visible;
   }
 
-  .menu-drawer{
+  .menu-drawer {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.174);
     inset: 0 40% 0 0;
@@ -59,50 +58,181 @@
     padding: 60px;
   }
   /* kiểm tra menu checkbox được check thì ẩn hiện menu drawer */
-  .menu-checkbox:checked ~ .menu-drawer{
+  .menu-checkbox:checked ~ .menu-drawer {
     transform: translateX(0);
   }
 
   /* menu top */
-  .close__menu{
+  .close__menu {
     width: 24px;
     color: #fff;
   }
 
-  .menu-drawer__top{
+  .menu-drawer__top {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 
-  .navbar__list{
+  .navbar__list {
     margin-top: 25px;
     flex-direction: column;
   }
 
-  #navbar__list--mobile{
+  #navbar__list--mobile {
     margin-top: 25px;
   }
 
-  .navbar__link{
+  .navbar__link {
     display: block;
     font-size: 2rem;
   }
 
-  .navbar__link:hover{
+  .navbar__link:hover {
     background-color: cadetblue;
+  }
+
+  /* khoi hero */
+  /* .hero {
+    flex-direction: column;
+    row-gap: 40px;
+  }
+  .hero__content {
+    order: 2;
+  }
+  .hero__media {
+    order: 1;
+  }
+
+  .hero__content {
+    width: 80%;
+    text-align: center;
+    margin: 22px auto;
+  }
+  .hero__row {
+    justify-content: center;
+  } */
+  .hero {
+    flex-direction: column;
+    row-gap: 50px;
+  }
+  .hero__media {
+    order: 1;
+  }
+  .hero__content {
+    order: 2;
+    width: 90%;
+    margin: 22px auto;
+  }
+  .hero__row {
+    justify-content: center;
+  }
+  /* khoi service */
+  .service__row {
+    flex-direction: column;
+  }
+  .service__img {
+    width: 100%;
+    margin: 22px auto;
+  }
+  .service__list {
+    text-align: center;
+  }
+  .service-item {
+    text-align: start;
+    width: 90%;
+  }
+  /* work */
+  .work .section-heading {
+    text-align: center;
+  }
+  .work__desc {
+    text-align: center;
+    width: 100%;
+  }
+  .work__list {
+    grid-template-columns: 1fr;
+    row-gap: 50px;
+  }
+  /* about */
+  .about-row {
+    flex-direction: column;
+    row-gap: 50px;
+  }
+  .about__img--small {
+    display: none;
+  }
+  .about__media {
+    width: 100%;
+  }
+
+  .about-content {
+    text-align: center;
+    width: 90%;
+    row-gap: 30px;
+  }
+  /* team */
+
+  .team__list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .team-item {
+    margin: 20px;
+  }
+  .team-item__thumb {
+    margin: 0 auto;
+  }
+  /* install */
+  .install__img {
+    display: none;
+  }
+  .install__content {
+    width: 90%;
+    margin: 0 auto;
+  }
+  /* blog */
+  .blog__inner {
+    flex-direction: column;
+    row-gap: 30px;
+  }
+  .blog__content {
+    width: 90%;
+    text-align: center;
+    order: 2;
+  }
+  .blog__heading {
+    max-width: 100%;
+  }
+  .blog__control {
+    justify-content: center;
+  }
+  .blog__list {
+    grid-template-columns: repeat(1, 1fr);
+    order: 1;
+  }
+  .blog-item {
+    text-align: center;
+    max-width: 80%;
+    margin: 30px auto;
+    font-size: 2rem;
+  }
+  .blog-item__thumb {
+    width: 70%;
+    height: 200px;
+  }
+  .blog-item__wrap {
+    height: auto;
   }
 }
 /* Tablet  */
-@media (min-width: 768px) and(max-width:991.98px) {
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .footer-hidden-column {
+    display: none;
+  }
+  .footer__top{
+    grid-template-columns: 0.5fr 0.5fr 0.5fr;
+  }
 }
 /* Mobile */
 @media (max-width: 767.98px) {
-}
-
-
-/* tạm ẩn phần không liên quan */
-
-.hero,.footer,main{
-    display: none;
 }
