haon thien responsive mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -229,10 +229,101 @@
   .footer-hidden-column {
     display: none;
   }
-  .footer__top{
+  .footer__top {
     grid-template-columns: 0.5fr 0.5fr 0.5fr;
+  }
+  .show-on-mobile {
+    display: none;
   }
 }
 /* Mobile */
 @media (max-width: 767.98px) {
+  .header__action {
+    display: none;
+  }
+  .menu-header__icon {
+    top: 16px;
+  }
+  .menu-drawer {
+    inset: 0 20% 0 0;
+    padding: 40px;
+  }
+  .navbar__item {
+    list-style: none;
+  }
+
+  /* them vach ke */
+  .separate {
+    border-top: 1.5px solid #8c8b8d;
+  }
+
+  /* phan hero */
+  .hero__img-small {
+    display: none;
+  }
+  .hero__img-large {
+    width: 100%;
+    height: auto;
+  }
+  .hero__heading,
+  .section-heading {
+    font-size: 3rem;
+  }
+  .hero__row {
+    flex-direction: column;
+    row-gap: 20px;
+  }
+
+  /* service */
+  .service {
+    padding: 70px 0;
+  }
+  .service__desc {
+    width: 94%;
+  }
+  .service__img {
+    width: 100%;
+    height: auto;
+  }
+  .work-item {
+    padding: 20px;
+  }
+  /* about */
+  .about {
+    margin-top: 20px;
+    padding: 40px 0;
+  }
+  .about__img--big {
+    width: 100%;
+    height: auto;
+  }
+  /* team */
+  .team__list {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .install__inner {
+    margin: 40px 0;
+    padding: 0 8px;
+  }
+  .install__content{
+    min-width: 250px;
+  }
+  .install__desc{
+    font-size: 1.3rem;
+  }
+  .appointment{
+    padding: 10px 0;
+  }
+  .appointment__inner{
+    padding: 20px 0;
+  }
+  .footer__top{
+    grid-template-columns: 1fr;
+    row-gap: 30px;
+  }
+  .footer__copyright{
+    margin-top: 40px;
+  }
 }
+
+
